# protoproto

./: .gitmodules  Cargo.toml  README.md  fitquad.py
hades/: Cargo.toml
hellas-consensus/: Cargo.toml  Morpheus.tla  README.md
hellas-consensus/Coq/: Morpheus.coq
hellas-consensus/Isabelle/: Morpheus.thy  Morpheus_F_Function.thy  Morpheus_Procedures.thy  Morpheus_Relations.thy  Morpheus_State.thy  Morpheus_Types.thy
hellas-consensus/Lean/: Bisimulation.lean  CryptoAbstraction.lean  Morpheus.lean  MorpheusOpt.lean  MorpheusOptCorrect.lean
hellas-consensus/Morpheus.toolbox/: .project  Morpheus___Morpheus_MiniConfig.launch
hellas-consensus/Morpheus.toolbox/Morpheus_MiniConfig/: MC.cfg  MC.tla
hellas-consensus/src/: lib.rs
hellas-consensus/src/morpheus/: README.md  actions.rs  blocks.rs  datalog_rules.txt  datalog_schema.txt  mod.rs  models.rs  ordering.rs  protocol.rs  state.rs  test_state.rs  types.rs  utils.rs  view_change.rs  voting.rs
hellas-morpheus/: Cargo.toml  PAPER.md  README.md
hellas-morpheus/src/: block_production.rs  block_validation.rs  crypto.rs  debug_impls.rs  finalization.rs  format.rs  invariants.rs  lib.rs  main.rs  message_handling.rs  mock_harness.rs  process.rs  pseudocode.txt  review_plan.txt  state_tracking.rs  test_harness.rs  tracing_setup.rs  types.rs  view_management.rs  voting.rs  web_harness.rs
hellas-morpheus/src/block_production/: leader.rs  mod.rs  transaction.rs
hellas-morpheus/src/protocol/: block_creation.rs  mod.rs  process.rs  view_management.rs  voting.rs
hellas-morpheus/src/state_tracking/: block.rs  index.rs  mod.rs  observes.rs  pending.rs  pending_votes.rs  qc.rs  voting.rs
hellas-morpheus/src/types/: block.rs  message.rs  mod.rs  process.rs
hellas-morpheus/tests/: advanced_harness_tests.rs  debug_impls_tests.rs  harness_tests.rs  integration_tests.rs  mock_harness_tests.rs  process_interaction_tests.rs  smoke_tests.rs
hellas-protocol/: Cargo.toml
hellas-protocol/src/: lib.rs
morpheus-viz/: Cargo.toml
morpheus-viz/public/: styles.scss
morpheus-viz/src/: lib.rs  main.rs  morpheus_harness.rs
morpheus-viz/src/components/: mod.rs  process_viewer.rs
morpheus-viz/src/pages/: home.rs  mod.rs  simulation_builder.rs
muchin/: Cargo.toml  README.md
muchin/benches/: automaton.rs
muchin/model_state_derive/: Cargo.toml
muchin/model_state_derive/src/: lib.rs
muchin/src/: lib.rs
muchin/src/automaton/: action.rs  mod.rs  model.rs  runner.rs  state.rs
muchin/src/models/effectful/mio/: action.rs  model.rs  state.rs
muchin/src/models/effectful/time/: action.rs  model.rs
muchin/src/models/pure/: mod.rs
muchin/src/models/pure/net/: mod.rs
muchin/src/models/pure/net/tcp/: action.rs  mod.rs  model.rs  state.rs  util.rs
muchin/src/models/pure/net/tcp_client/: action.rs  model.rs  state.rs
muchin/src/models/pure/net/tcp_server/: action.rs  model.rs  state.rs
muchin/src/models/pure/prng/: action.rs  model.rs
muchin/src/models/pure/tests/: mod.rs
muchin/src/models/pure/tests/echo_client/: action.rs  model.rs  state.rs
muchin/src/models/pure/tests/echo_server/: action.rs  model.rs  state.rs
muchin/src/models/pure/time/: action.rs  model.rs  state.rs
muchin/src/tests/: echo_network.rs
native-node/: Cargo.toml
native-node/src/: cli.rs  main.rs
native-node/static/: index.html
protocol/src/: lib.rs
web-node/: Cargo.toml
web-node/src/: lib.rs
