[workspace]
members = ["muchin", "muchin/model_state_derive", "hellas-protocol", "hades", "native-node", "web-node", "hellas-morpheus", "morpheus-viz", "hints"]
resolver = "2"

# [profile.release]
# opt-level = 3
# lto = "thin"
# incremental = true
# debug = true

# [profile.test]
# opt-level = 3
# debug-assertions = true
# incremental = true
# debug = true

[profile.test]
opt-level = 2
debug-assertions = true

[profile.dev]
opt-level = 2
debug-assertions = true

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1