[package]
name = "hellas-consensus"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ember arlynx <ember@hellas.ai>"]

[dependencies]
log = "0.4.26"
muchin = { path = "../muchin" }
muchin_model_state_derive = { version = "0.1.0", path = "../muchin/model_state_derive" }
serde = { version = "1.0", features = ["derive"] }
type-uuid = "0.1.2"
