[package]
name = "hellas-morpheus"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-wasm = "0.2"
time = { version = "0.3.39", features = ["serde"] }

# Web visualization dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "MouseEvent",
  "DomRect",
  "CssStyleDeclaration",
  "EventTarget",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# For web interface (choose one)
# React-based approach with Yew
yew = "0.21"
gloo = "0.10"
yew-hooks = "0.2"

# Leptos option (commented out, uncomment to use)
# leptos = { version = "0.5", features = ["csr"] }
# leptos_router = { version = "0.5", features = ["csr"] }

[lib]
crate-type = ["cdylib", "rlib"]

# Enable these features for better wasm optimization
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Dependencies just for the visualization tools (not for the core protocol)
[features]
default = ["visualization"]
visualization = []