[package]
name = "muchin"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "OpenMina", "ember arlynx <ember@hellas.ai>" ]
description = "Support for composing large, interacting, complicated state machines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "1", features = ["os-poll", "net"]}
rand = {version = "0.9", features = ["small_rng"]}
log = "0.4"
env_logger = "0.11"
colored = "3"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
type-uuid = "0.1.2"
gensym = "0.1.1"
linkme = "0.3.31"
paste = "1.0.15"
muchin_model_state_derive = { version = "0.1", path = "./model_state_derive" }