[package]
name = "native-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
libp2p = { version = "0.55", features = ["tokio", "full"] }
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
argh = "0.1"
hex = "0.4.3"

axum = { version = "0.7.5", features = ["tracing"] }
rust-embed = { version = "8.4.0", features = ["include-exclude", "interpolate-folder-path"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
mime_guess = "2.0.4"

anyhow = "1.0.86"
rand = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }