[package]
name = "web-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
futures = "0.3"
tracing = { version = "0.1.31" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
js-sys = "0.3.69"
libp2p = { version = "0.55", features = ["full", "wasm-bindgen"] }
libp2p-webrtc-websys = "0.4.0"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Response',
    'Window',
] }
